--- a/config/default/sync/system.site.yml
+++ b/config/default/sync/system.site.yml
@@ -1,5 +1,5 @@
 uuid: ea3e45dd-0205-474d-a359-393f71aa0d84
-name: 'DEPARTMENT OF PHYSICS AND COMPUTER SCIENCE'
+name: 'SCHOOL OF TECHNOLOGY'
 mail: abuman600@gmail.com
 slogan: ''
 page:
