--- a/config/default/sync/user.role.authenticated.yml
+++ b/config/default/sync/user.role.authenticated.yml
@@ -16,6 +16,7 @@ permissions:
   - 'post comments'
   - 'search content'
   - 'skip comment approval'
+  - 'use advanced search'
   - 'use text format basic_html'
   - 'view any webform submission'
   - 'view own unpublished content'
