--- a/config/default/sync/block.block.views_block__course_allocation2_block_1.yml
+++ b/config/default/sync/block.block.views_block__course_allocation2_block_1.yml
@@ -13,7 +13,7 @@ dependencies:
 id: views_block__course_allocation2_block_1
 theme: tourismplus
 region: hidden_blocks_collection
-weight: 1
+weight: -1
 provider: null
 plugin: 'views_block:course_allocation2-block_1'
 settings:
@@ -33,6 +33,9 @@ visibility:
     id: user_role
     roles:
       secretariats: secretariats
+      head_of_department: head_of_department
+      students: students
+      dean: dean
     negate: false
     context_mapping:
       user: '@user.current_user_context:current_user'
