--- a/config/default/sync/tourismplus.settings.yml
+++ b/config/default/sync/tourismplus.settings.yml
@@ -27,8 +27,8 @@ header_region_paddings: 0
 fixed_header: 1
 banner_layout_container: container-fluid
 banner_background_color: 'region--dark-typography region--white-background'
-banner_blocks_paddings: 1
-banner_region_paddings: 1
+banner_blocks_paddings: 0
+banner_region_paddings: 0
 content_top_layout_container: container-fluid
 content_top_background_color: 'region--dark-typography region--white-background'
 content_top_animation_effect: fadeIn
@@ -104,7 +104,7 @@ footer_background_color: 'region--light-typography region--colored-secondary-bac
 footer_animation_effect: fadeIn
 footer_blocks_paddings: 0
 footer_region_paddings: 0
-footer_bottom_layout_container: container
+footer_bottom_layout_container: container-fluid
 footer_bottom_separator: region--no-separator
 footer_bottom_background_color: 'region--light-typography region--colored-secondary-background'
 footer_bottom_blocks_paddings: 0
@@ -121,8 +121,8 @@ font_resize: 1
 post_progress: 1
 affix_side: 1
 layout_mode: wide
-headings_font_family: hff-45
-headings_wide_spacing: 0
+headings_font_family: hff-30
+headings_wide_spacing: 1
 paragraph_font_family: pff-05
 sitename_font_family: sff-45
 slogan_font_family: slff-45
@@ -189,7 +189,7 @@ footer_top_id: footer-top
 footer_id: footer
 footer_bottom_id: footer-bottom
 subfooter_id: subfooter
-isotope_layout_mode: masonry
+isotope_layout_mode: fitRows
 isotope_filters_text: All
 google_maps_key: AIzaSyDyL-4KyWw_3hp-0jmZLGcJ3zMWkkJ44VI
 _core:
