--- a/config/default/sync/user.role.secretariats.yml
+++ b/config/default/sync/user.role.secretariats.yml
@@ -6,4 +6,5 @@ id: secretariats
 label: Secretariats
 weight: 3
 is_admin: null
-permissions: {  }
+permissions:
+  - 'view webform submissions any node'
