--- a/config/default/sync/views.view.course_content.yml
+++ b/config/default/sync/views.view.course_content.yml
@@ -1,20 +1,17 @@
-uuid: 4f3514f7-b9ce-4579-8385-41a74d054bf5
+uuid: 10922cd0-8fde-47ba-be8a-115ffbc23866
 langcode: en
 status: true
 dependencies:
   config:
     - system.menu.main
-    - user.role.administrator
-    - user.role.authenticated
-    - user.role.create_nu_grades
     - user.role.dean
     - user.role.head_of_department
     - user.role.secretariats
     - user.role.students
-    - user.role.submitgrade
     - webform.webform.course_contents
   module:
     - user
+    - views_bootstrap
     - webform
     - webform_views
 id: course_content
@@ -36,12 +33,8 @@ display:
         type: role
         options:
           role:
-            authenticated: authenticated
-            administrator: administrator
             secretariats: secretariats
-            submitgrade: submitgrade
             head_of_department: head_of_department
-            create_nu_grades: create_nu_grades
             students: students
             dean: dean
       cache:
@@ -71,7 +64,7 @@ display:
           items_per_page: null
           offset: 0
       style:
-        type: table
+        type: views_bootstrap_table
       row:
         type: fields
       fields:
@@ -83,162 +76,6 @@ display:
           group_type: group
           admin_label: ''
           label: 'Academic Year'
-          exclude: false
-          alter:
-            alter_text: false
-            text: ''
-            make_link: false
-            path: ''
-            absolute: false
-            external: false
-            replace_spaces: false
-            path_case: none
-            trim_whitespace: false
-            alt: ''
-            rel: ''
-            link_class: ''
-            prefix: ''
-            suffix: ''
-            target: ''
-            nl2br: false
-            max_length: 0
-            word_boundary: true
-            ellipsis: true
-            more_link: false
-            more_link_text: ''
-            more_link_path: ''
-            strip_tags: false
-            trim: false
-            preserve_tags: ''
-            html: false
-          element_type: ''
-          element_class: ''
-          element_label_type: ''
-          element_label_class: ''
-          element_label_colon: true
-          element_wrapper_type: ''
-          element_wrapper_class: ''
-          element_default_classes: true
-          empty: ''
-          hide_empty: false
-          empty_zero: false
-          hide_alter_empty: true
-          webform_element_format: value
-          webform_multiple_value: true
-          webform_multiple_delta: 0
-          plugin_id: webform_submission_field
-        webform_submission_value_4:
-          id: webform_submission_value_4
-          table: webform_submission_field_course_contents_semester
-          field: webform_submission_value
-          relationship: none
-          group_type: group
-          admin_label: ''
-          label: Semester
-          exclude: false
-          alter:
-            alter_text: false
-            text: ''
-            make_link: false
-            path: ''
-            absolute: false
-            external: false
-            replace_spaces: false
-            path_case: none
-            trim_whitespace: false
-            alt: ''
-            rel: ''
-            link_class: ''
-            prefix: ''
-            suffix: ''
-            target: ''
-            nl2br: false
-            max_length: 0
-            word_boundary: true
-            ellipsis: true
-            more_link: false
-            more_link_text: ''
-            more_link_path: ''
-            strip_tags: false
-            trim: false
-            preserve_tags: ''
-            html: false
-          element_type: ''
-          element_class: ''
-          element_label_type: ''
-          element_label_class: ''
-          element_label_colon: true
-          element_wrapper_type: ''
-          element_wrapper_class: ''
-          element_default_classes: true
-          empty: ''
-          hide_empty: false
-          empty_zero: false
-          hide_alter_empty: true
-          webform_element_format: value
-          webform_multiple_value: true
-          webform_multiple_delta: 0
-          plugin_id: webform_submission_field
-        webform_submission_value_3:
-          id: webform_submission_value_3
-          table: webform_submission_field_course_contents_program
-          field: webform_submission_value
-          relationship: none
-          group_type: group
-          admin_label: ''
-          label: Program
-          exclude: false
-          alter:
-            alter_text: false
-            text: ''
-            make_link: false
-            path: ''
-            absolute: false
-            external: false
-            replace_spaces: false
-            path_case: none
-            trim_whitespace: false
-            alt: ''
-            rel: ''
-            link_class: ''
-            prefix: ''
-            suffix: ''
-            target: ''
-            nl2br: false
-            max_length: 0
-            word_boundary: true
-            ellipsis: true
-            more_link: false
-            more_link_text: ''
-            more_link_path: ''
-            strip_tags: false
-            trim: false
-            preserve_tags: ''
-            html: false
-          element_type: ''
-          element_class: ''
-          element_label_type: ''
-          element_label_class: ''
-          element_label_colon: true
-          element_wrapper_type: ''
-          element_wrapper_class: ''
-          element_default_classes: true
-          empty: ''
-          hide_empty: false
-          empty_zero: false
-          hide_alter_empty: true
-          webform_element_format: value
-          webform_multiple_value: true
-          webform_multiple_delta: 0
-          plugin_id: webform_submission_field
-        webform_submission_value_2:
-          id: webform_submission_value_2
-          table: webform_submission_field_course_contents_course_code
-          field: webform_submission_value
-          relationship: none
-          group_type: group
-          admin_label: ''
-          label: 'Course Code'
           exclude: false
           alter:
             alter_text: false
@@ -335,6 +172,110 @@ display:
           webform_multiple_value: true
           webform_multiple_delta: 0
           plugin_id: webform_submission_field
+        webform_submission_value_2:
+          id: webform_submission_value_2
+          table: webform_submission_field_course_contents_department
+          field: webform_submission_value
+          relationship: none
+          group_type: group
+          admin_label: ''
+          label: Department
+          exclude: false
+          alter:
+            alter_text: false
+            text: ''
+            make_link: false
+            path: ''
+            absolute: false
+            external: false
+            replace_spaces: false
+            path_case: none
+            trim_whitespace: false
+            alt: ''
+            rel: ''
+            link_class: ''
+            prefix: ''
+            suffix: ''
+            target: ''
+            nl2br: false
+            max_length: 0
+            word_boundary: true
+            ellipsis: true
+            more_link: false
+            more_link_text: ''
+            more_link_path: ''
+            strip_tags: false
+            trim: false
+            preserve_tags: ''
+            html: false
+          element_type: ''
+          element_class: ''
+          element_label_type: ''
+          element_label_class: ''
+          element_label_colon: true
+          element_wrapper_type: ''
+          element_wrapper_class: ''
+          element_default_classes: true
+          empty: ''
+          hide_empty: false
+          empty_zero: false
+          hide_alter_empty: true
+          webform_element_format: value
+          webform_multiple_value: true
+          webform_multiple_delta: 0
+          plugin_id: webform_submission_field
+        webform_submission_value_3:
+          id: webform_submission_value_3
+          table: webform_submission_field_course_contents_semester
+          field: webform_submission_value
+          relationship: none
+          group_type: group
+          admin_label: ''
+          label: Semester
+          exclude: false
+          alter:
+            alter_text: false
+            text: ''
+            make_link: false
+            path: ''
+            absolute: false
+            external: false
+            replace_spaces: false
+            path_case: none
+            trim_whitespace: false
+            alt: ''
+            rel: ''
+            link_class: ''
+            prefix: ''
+            suffix: ''
+            target: ''
+            nl2br: false
+            max_length: 0
+            word_boundary: true
+            ellipsis: true
+            more_link: false
+            more_link_text: ''
+            more_link_path: ''
+            strip_tags: false
+            trim: false
+            preserve_tags: ''
+            html: false
+          element_type: ''
+          element_class: ''
+          element_label_type: ''
+          element_label_class: ''
+          element_label_colon: true
+          element_wrapper_type: ''
+          element_wrapper_class: ''
+          element_default_classes: true
+          empty: ''
+          hide_empty: false
+          empty_zero: false
+          hide_alter_empty: true
+          webform_element_format: value
+          webform_multiple_value: true
+          webform_multiple_delta: 0
+          plugin_id: webform_submission_field
       filters:
         webform_id:
           id: webform_id
@@ -345,48 +286,9 @@ display:
           entity_type: webform_submission
           entity_field: webform_id
           plugin_id: bundle
-        webform_submission_value:
-          id: webform_submission_value
-          table: webform_submission_field_course_contents_academic_year
-          field: webform_submission_value
-          relationship: none
-          group_type: group
-          admin_label: ''
-          operator: '='
-          value: ''
-          group: 1
-          exposed: true
-          expose:
-            operator_id: webform_submission_value_op
-            label: 'Academic Year'
-            description: ''
-            use_operator: false
-            operator: webform_submission_value_op
-            identifier: webform_submission_value
-            required: false
-            remember: false
-            multiple: false
-            remember_roles:
-              authenticated: authenticated
-              anonymous: '0'
-              administrator: '0'
-            placeholder: ''
-          is_grouped: false
-          group_info:
-            label: ''
-            description: ''
-            identifier: ''
-            optional: true
-            widget: select
-            multiple: false
-            remember: false
-            default_group: All
-            default_group_multiple: {  }
-            group_items: {  }
-          plugin_id: webform_submission_field_filter
         webform_submission_value_1:
           id: webform_submission_value_1
-          table: webform_submission_field_course_contents_program
+          table: webform_submission_field_course_contents_department
           field: webform_submission_value
           relationship: none
           group_type: group
@@ -397,7 +299,7 @@ display:
           exposed: true
           expose:
             operator_id: webform_submission_value_1_op
-            label: Program
+            label: Department
             description: ''
             use_operator: false
             operator: webform_submission_value_1_op
@@ -409,6 +311,11 @@ display:
               authenticated: authenticated
               anonymous: '0'
               administrator: '0'
+              secretariats: '0'
+              head_of_department: '0'
+              create_nu_grades: '0'
+              students: '0'
+              dean: '0'
             reduce: false
           is_grouped: false
           group_info:
@@ -448,6 +355,11 @@ display:
               authenticated: authenticated
               anonymous: '0'
               administrator: '0'
+              secretariats: '0'
+              head_of_department: '0'
+              create_nu_grades: '0'
+              students: '0'
+              dean: '0'
             reduce: false
           is_grouped: false
           group_info:
@@ -502,9 +414,14 @@ display:
       path: course-content
       menu:
         type: normal
-        title: 'Course Content'
+        title: Syllabus
+        description: ''
+        expanded: false
+        parent: ''
+        weight: 1
+        context: '0'
         menu_name: main
-        weight: -49
+        enabled: true
     cache_metadata:
       max-age: -1
       contexts:
