--- a/config/default/sync/views.view.frontpage.yml
+++ b/config/default/sync/views.view.frontpage.yml
@@ -261,8 +261,8 @@ display:
       sitename_title: true
       path: rss.xml
       displays:
-        page_1: page_1
-        default: ''
+        default: '0'
+        page_1: '0'
       pager:
         type: some
         options:
@@ -280,6 +280,7 @@ display:
           relationship: none
           view_mode: rss
       display_extenders: {  }
+      enabled: true
     cache_metadata:
       contexts:
         - 'languages:language_interface'
