--- a/config/default/sync/webform.webform.course_materials.yml
+++ b/config/default/sync/webform.webform.course_materials.yml
@@ -1,23 +1,18 @@
-uuid: b1ef9c7d-af89-4240-9f57-68c8835cf861
+uuid: 688cd2be-3b40-4a76-8acb-21b637dbfe67
 langcode: en
 status: open
-dependencies:
-  enforced:
-    module:
-      - webform_examples
-_core:
-  default_config_hash: b0psYSDhsWjL_0SNz4iU4Mvx4temKmotszeiEjJRN_c
+dependencies: {  }
 open: null
 close: null
 weight: 0
-uid: null
+uid: 1
 template: false
 archive: false
-id: example_input_masks
-title: 'Example: Input Masks'
-description: 'Examples of elements with <a href="https://github.com/RobinHerbots/jquery.inputmask">input masks</a>.'
-category: Example
-elements: "masks:\n  '#type': details\n  '#title': 'Simple masks'\n  '#open': true\n  phone:\n    '#type': textfield\n    '#title': Phone\n    '#input_mask': '(999) 999-9999'\n  zip:\n    '#type': textfield\n    '#title': 'ZIP Code'\n    '#input_mask': '99999[-9999]'\n  ssn:\n    '#type': textfield\n    '#title': SSN\n    '#input_mask': 999-99-9999\n  license_plate:\n    '#type': textfield\n    '#title': 'License plate'\n    '#input_mask': '[9-]AAA-999'\naliases:\n  '#type': details\n  '#title': Aliases\n  '#open': true\n  email:\n    '#type': textfield\n    '#title': Email\n    '#input_mask': '''alias'': ''email'''\n  datetime:\n    '#type': textfield\n    '#title': 'Date time (2007-06-09'T'17:46:21)'\n    '#input_mask': '''alias'': ''datetime'''\n  currency:\n    '#type': textfield\n    '#title': Currency\n    '#input_mask': '''alias'': ''currency'''\n    '#attributes':\n      style: 'text-align: right'\n  numeric:\n    '#type': textfield\n    '#title': Numeric\n    '#input_mask': '''alias'': ''numeric'', ''groupSeparator'': '','', ''autoGroup'': true, ''digits'': 2, ''digitsOptional'': false, ''prefix'': ''$ '', ''placeholder'': ''0'''\n    '#attributes':\n      style: 'text-align: right'\n  percentage:\n    '#type': textfield\n    '#title': 'Percentage (default)'\n    '#input_mask': '''alias'': ''percentage'''\n    '#attributes':\n      style: 'text-align: right'\n  ip:\n    '#type': textfield\n    '#title': 'IP address'\n    '#input_mask': '''alias'': ''ip'''\n  mac:\n    '#type': textfield\n    '#title': 'MAC addresses'\n    '#input_mask': '''alias'': ''mac'''\n  vin:\n    '#type': textfield\n    '#title': 'VIN (Vehicle identification number)'\n    '#input_mask': '''alias'': ''vin'''\n  uppercase:\n    '#type': textfield\n    '#title': UPPERCASE\n    '#input_mask': '''casing'': ''upper'''\n  lowercase:\n    '#type': textfield\n    '#title': lowercase\n    '#input_mask': '''casing'': ''lower'''\n"
+id: course_materials
+title: 'COURSE MATERIALS'
+description: ''
+category: ''
+elements: "flexbox:\n  '#type': webform_flexbox\n  academic_year:\n    '#type': textfield\n    '#title': 'Academic Year'\n    '#placeholder': 'e.g 2016/2017'\n    '#required': true\n  year:\n    '#type': select\n    '#title': Year\n    '#options':\n      1: 'First Year'\n      2: 'Second Year'\n      3: 'Third Year'\n      4: 'Fourth Year'\n    '#required': true\n  semester:\n    '#type': select\n    '#title': Semester\n    '#options':\n      1: 'First Semester'\n      2: 'Second Semester'\n    '#required': true\n  program:\n    '#type': select\n    '#title': Program\n    '#options':\n      1: 'BSc (Hons) Computer Science'\n      2: 'BSc (Hons) Business and Information Technology'\n      3: 'BSc (Hons) Electronics and Telecommunication'\n    '#required': true\n  download:\n    '#type': webform_document_file\n    '#title': Download\n    '#required': true\n    '#file_extensions': 'pdf doc docx ppt pptx '"
 css: ''
 javascript: ''
 settings:
@@ -26,7 +21,7 @@ settings:
   page: true
   page_submit_path: ''
   page_confirm_path: ''
-  form_title: source_entity_webform
+  form_title: both
   form_submit_once: false
   form_exception_message: ''
   form_open_message: ''
@@ -126,9 +121,9 @@ settings:
 access:
   create:
     roles:
-      - anonymous
-      - authenticated
-    users: {  }
+      - lecturer
+    users:
+      - 48
     permissions: {  }
   view_any:
     roles: {  }
@@ -159,10 +154,15 @@ access:
     users: {  }
     permissions: {  }
   administer:
-    roles: {  }
+    roles:
+      - lecturer
     users: {  }
     permissions: {  }
   test:
+    roles: {  }
+    users: {  }
+    permissions: {  }
+  configuration:
     roles: {  }
     users: {  }
     permissions: {  }
