--- a/composer.json
+++ b/composer.json
@@ -25,7 +25,9 @@
         "drupal/auto_entitylabel": "^2.1@beta",
         "drupal/autologout": "^1.0",
         "drupal/better_exposed_filters": "^3.0@alpha",
+        "drupal/betterlogin": "^1.2",
         "drupal/bulk_content_operation": "^3.0",
+        "drupal/bulk_user_registration": "^1.1@alpha",
         "drupal/captcha": "^1.0",
         "drupal/chosen": "^2.6",
         "drupal/clamav": "^1.1",
@@ -40,6 +42,7 @@
         "drupal/crop": "^1.5",
         "drupal/csv_importer": "^1.3",
         "drupal/ctools": "^3.0",
+        "drupal/datatables": "^1.0@RC",
         "drupal/delete_all": "^1.0",
         "drupal/diff": "^1.0@RC",
         "drupal/domain_registration": "^1.3",
@@ -48,6 +51,7 @@
         "drupal/easy_breadcrumb": "^1.8",
         "drupal/eck": "^1.0",
         "drupal/encrypt": "^3.0@RC",
+        "drupal/entity_print": "^2.1",
         "drupal/feeds": "^3.0@alpha",
         "drupal/flexslider": "^2.0@beta",
         "drupal/fontawesome": "^2.9",
@@ -84,12 +88,15 @@
         "drupal/search_api": "^1.11",
         "drupal/shield": "^1.2",
         "drupal/smtp": "^1.0@beta",
+        "drupal/super_login": "^1.2",
         "drupal/superfish": "^1.2",
         "drupal/swiftmailer": "^1.0@beta",
         "drupal/tb_megamenu": "1.x-dev",
         "drupal/tfa": "^1.0@alpha",
         "drupal/token": "^1.5",
+        "drupal/view_custom_table": "^1.2",
         "drupal/views_bootstrap": "^3.1",
+        "drupal/views_flipped_table": "^1.3",
         "drupal/webform": "^5.0@RC",
         "drupal/webform_analysis": "^1.0",
         "drupal/webform_civicrm": "5.x-dev",
